Fixed styles for figcaption. Now it is possible to wrap long links.

--- a/style.css
+++ b/style.css
@@ -540,6 +540,7 @@ figcaption {
     line-height: 108%;
     padding: 3px 5px 0;
     text-align: center;
+    word-wrap: break-word;
 }
 
 figure img {
